Update to RenderD7 0.9.3 and Fix some Creshes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,6 +87,8 @@
         "xutility": "cpp",
         "*.tcc": "cpp",
         "memory_resource": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "typeindex": "cpp",
+        "hash_map": "cpp"
     }
 }
